<resources>
    <string name="app_name">Aplicacion</string>
    <string name="action_help">action_help</string>
    <string name="despliegue_home">despligue a home</string>

    <!-- valores de texto para las etiquetas de los niveles -->
    <string name="levelsTitle">Selecciona un nivel </string>
    <string name="level1">Nivel 1</string>
    <string name="level2">Nivel 2</string>
    <string name="level3">Nivel 3</string>
    <string name="level4">Nivel 4</string>

    <!---Valores de texto para las etiquetas de los nombres de las materias de cada nivel -->
    <!-- materias nievl 1 -->
    <string name="subjectsTitle">Selecciona una materia</string>
    <string name="subject1_Level1">Matematicas 1</string>
    <string name="subject2_Level1">Lengua y Literatura 1</string>
    <string name="subject3_Level1">Ciencias sociales 1</string>
    <string name="subject4_Level1">Ciencias naturales 1</string>
    <!-- para el nivel 1 -->
    <!-- materias nivel 2-->
    <string name="subject1_Level2">Matematicas 2</string>
    <string name="subject2_Level2">Lengua y Literatura 2</string>
    <string name="subject3_Level2">Ciencias sociales 2</string>
    <string name="subject4_Level2">Ciencias naturales 2</string>

    <!-- materias nivel 3 -->
    <string name="subject1_Level3">Matematicas 3</string>
    <string name="subject2_Level3">Lengua y Literatura 3</string>
    <string name="subject3_Level3">Ciencias sociales 3</string>
    <string name="subject4_Level3">Ciencias naturales 3</string>

    <!-- materias nivel 4 -->
    <string name="subject1_Level4">Matematicas 4</string>
    <string name="subject2_Level4">Lengua y Literatura 4</string>
    <string name="subject3_Level4">Ciencias sociales 4</string>
    <string name="subject4_Level4">Ciencias naturales 4</string>

    <!-- ************************************************************************************************************ -->
    <!-- Valores de texto para las etiquetas de los nombres de la lecciones de cada materia -->
    <string name="lessonsTitle">Seleccione una leccion </string>
    <!-- lecciones materia 1 nivel 1 -->
    <string name="lesson1_subject1_Level1">Leccion 1 - sb1 - lv1</string>
    <string name="lesson2_subject1_Level1">Leccion 3 - sb1 - lv1</string>
    <string name="lesson3_subject1_Level1">Leccion 3 - sb1 - lv1</string>
    <string name="lesson4_subject1_Level1">Leccion 4 - sb1 - lv1</string>

    <!-- lecciones materia 2 nivel 1 -->
    <string name="lesson1_subject2_Level1">Leccion 1 - sb2 - lv1</string>
    <string name="lesson2_subject2_Level1">Leccion 3 - sb2 - lv1</string>
    <string name="lesson3_subject2_Level1">Leccion 3 - sb2 - lv1</string>
    <string name="lesson4_subject2_Level1">Leccion 4 - sb2 - lv1</string>

    <!-- lecciones materia 3 nivel 1 -->
    <string name="lesson1_subject3_Level1">Leccion 1 - sb3 - lv1</string>
    <string name="lesson2_subject3_Level1">Leccion 3 - sb3 - lv1</string>
    <string name="lesson3_subject3_Level1">Leccion 3 - sb3 - lv1</string>
    <string name="lesson4_subject3_Level1">Leccion 4 - sb3 - lv1</string>

    <!-- lecciones materia 4 nivel 1 -->
    <string name="lesson1_subject4_Level1">Leccion 1 - sb4 - lv1</string>
    <string name="lesson2_subject4_Level1">Leccion 3 - sb4 - lv1</string>
    <string name="lesson3_subject4_Level1">Leccion 3 - sb4 - lv1</string>
    <string name="lesson4_subject4_Level1">Leccion 4 - sb4 - lv1</string>

    <!-- para el nivel 2 -->
    <!-- lecciones materia 1 nivel 2 -->
    <string name="lesson1_subject1_Level2">Leccion 1 - sb1 - lv2</string>
    <string name="lesson2_subject1_Level2">Leccion 3 - sb1 - lv2</string>
    <string name="lesson3_subject1_Level2">Leccion 3 - sb1 - lv2</string>
    <string name="lesson4_subject1_Level2">Leccion 4 - sb1 - lv2</string>

    <!-- lecciones materia 2 nivel 2 -->
    <string name="lesson1_subject2_Level2">Leccion 1 - sb2 - lv2</string>
    <string name="lesson2_subject2_Level2">Leccion 3 - sb2 - lv2</string>
    <string name="lesson3_subject2_Level2">Leccion 3 - sb2 - lv2</string>
    <string name="lesson4_subject2_Level2">Leccion 4 - sb2 - lv2</string>

    <!-- lecciones materia 3 nivel 2 -->
    <string name="lesson1_subject3_Level2">Leccion 1 - sb3 - lv2</string>
    <string name="lesson2_subject3_Level2">Leccion 3 - sb3 - lv2</string>
    <string name="lesson3_subject3_Level2">Leccion 3 - sb3 - lv2</string>
    <string name="lesson4_subject3_Level2">Leccion 4 - sb3 - lv2</string>

    <!-- lecciones materia 4 nivel 2 -->
    <string name="lesson1_subject4_Level2">Leccion 1 - sb4 - lv2</string>
    <string name="lesson2_subject4_Level2">Leccion 3 - sb4 - lv2</string>
    <string name="lesson3_subject4_Level2">Leccion 3 - sb4 - lv2</string>
    <string name="lesson4_subject4_Level2">Leccion 4 - sb4 - lv2</string>

    <!-- para el nivel 3 -->
    <!-- lecciones materia 1 nivel 3 -->
    <string name="lesson1_subject1_Level3">Leccion 1 - sb1 - lv3</string>
    <string name="lesson2_subject1_Level3">Leccion 3 - sb1 - lv3</string>
    <string name="lesson3_subject1_Level3">Leccion 3 - sb1 - lv3</string>
    <string name="lesson4_subject1_Level3">Leccion 4 - sb1 - lv3</string>

    <!-- lecciones materia 2 nivel 3 -->
    <string name="lesson1_subject2_Level3">Leccion 1 - sb2 - lv3</string>
    <string name="lesson2_subject2_Level3">Leccion 3 - sb2 - lv3</string>
    <string name="lesson3_subject2_Level3">Leccion 3 - sb2 - lv3</string>
    <string name="lesson4_subject2_Level3">Leccion 4 - sb2 - lv3</string>

    <!-- lecciones materia 3 nivel 3 -->
    <string name="lesson1_subject3_Level3">Leccion 1 - sb3 - lv3</string>
    <string name="lesson2_subject3_Level3">Leccion 3 - sb3 - lv3</string>
    <string name="lesson3_subject3_Level3">Leccion 3 - sb3 - lv3</string>
    <string name="lesson4_subject3_Level3">Leccion 4 - sb3 - lv3</string>

    <!-- lecciones materia 4 nivel 3 -->
    <string name="lesson1_subject4_Level3">Leccion 1 - sb4 - lv3</string>
    <string name="lesson2_subject4_Level3">Leccion 3 - sb4 - lv3</string>
    <string name="lesson3_subject4_Level3">Leccion 3 - sb4 - lv3</string>
    <string name="lesson4_subject4_Level3">Leccion 4 - sb4 - lv3</string>

    <!-- para el nivel 4 -->
    <!-- lecciones materia 1 nivel 4 -->
    <string name="lesson1_subject1_Level4">Leccion 1 - sb1 - lv4</string>
    <string name="lesson2_subject1_Level4">Leccion 3 - sb1 - lv4</string>
    <string name="lesson3_subject1_Level4">Leccion 3 - sb1 - lv4</string>
    <string name="lesson4_subject1_Level4">Leccion 4 - sb1 - lv4</string>

    <!-- lecciones materia 2 nivel 4 -->
    <string name="lesson1_subject2_Level4">Leccion 1 - sb2 - lv4</string>
    <string name="lesson2_subject2_Level4">Leccion 3 - sb2 - lv4</string>
    <string name="lesson3_subject2_Level4">Leccion 3 - sb2 - lv4</string>
    <string name="lesson4_subject2_Level4">Leccion 4 - sb2 - lv4</string>

    <!-- lecciones materia 3 nivel 4 -->
    <string name="lesson1_subject3_Level4">Leccion 1 - sb3 - lv4</string>
    <string name="lesson2_subject3_Level4">Leccion 3 - sb3 - lv4</string>
    <string name="lesson3_subject3_Level4">Leccion 3 - sb3 - lv4</string>
    <string name="lesson4_subject3_Level4">Leccion 4 - sb3 - lv4</string>

    <!-- lecciones materia 4 nivel 4 -->
    <string name="lesson1_subject4_Level4">Leccion 1 - sb4 - lv4</string>
    <string name="lesson2_subject4_Level4">Leccion 3 - sb4 - lv4</string>
    <string name="lesson3_subject4_Level4">Leccion 3 - sb4 - lv4</string>
    <string name="lesson4_subject4_Level4">Leccion 4 - sb4 - lv4</string>
    <!-- ************************************************************************************************************ -->

    <string name="titulo_leccion_1_materia_1">Titulo leccion 1 - materia 1</string>
    <string name="lesson1_subject1_level1_description">Vivamus felis neque, consequat blandit ligula eget, malesuada porta felis. Suspendisse potenti. Quisque quis molestie enim. Integer ac consequat tortor. Vestibulum dapibus eget sem vitae efficitur. Mauris at metus urna. Sed id pretium nisl. Mauris vehicula rhoncus erat quis imperdiet. Nullam hendrerit consequat lacus, eu pellentesque sem auctor eget.</string>
    <string name="label_button_exersise">Ejercicios</string>
    <string name="videoDescription">Fusce ut porttitor lectus. Praesent erat dui, placerat et enim vitae, lobortis tincidunt leo. Nam sed sapien ac lectus suscipit tempor.</string>
    <string name="ver_video">Ver video</string>
</resources>
