<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.rojoyazul.com.android_app_project_movile.MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ScrollViewHome"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/LayoutVerticalHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textNIVEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levelsTitle"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="62.5dp"
                android:layout_marginLeft="62.5dp"
                android:text="@string/level1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:id="@+id/Btn_Nivel1"
                android:layout_below="@+id/textNIVEL"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:theme="@style/StyleBotones"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="62.5dp"
                android:layout_marginLeft="62.5dp"
                android:text="@string/level2"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:id="@+id/Btn_Nivel2"
                android:layout_below="@+id/Btn_Nivel1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:theme="@style/StyleBotones"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="62.5dp"
                android:layout_marginLeft="62.5dp"
                android:text="@string/level3"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:id="@+id/Btn_Nivel3"
                android:layout_below="@+id/Btn_Nivel2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:theme="@style/StyleBotones"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="62.5dp"
                android:layout_marginLeft="62.5dp"
                android:textColor="@color/colorAccent"
                android:text="@string/level4"
                android:textSize="14sp"
                android:id="@+id/Btn_Nivel4"
                android:layout_below="@+id/Btn_Nivel3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:theme="@style/StyleBotones"/>



        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/ButtonNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/StyleBotones"
            android:src="@drawable/ic_help_white_24dp"
            android:layout_above="@id/ScrollViewHome"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>
</RelativeLayout>
