<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".Lesson1_Subject1_Level1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLessonTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TITULOS"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/titulo_leccion_1_materia_1"
                />

            <TextView
                android:id="@+id/txtLessonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:theme="@style/lessonDescrip"
                android:text="@string/lesson1_subject1_level1_description"/>

            <Button
                android:id="@+id/btnEjecicios1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65.5dp"
                android:layout_marginRight="65.5dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:theme="@style/StyleBotones"
                android:text="@string/label_button_exersise"
                android:onClick="onClick" />

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="@color/colorAccent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_help_black_24dp"/>
                    <TextView
                        android:id="@+id/cardtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Titulo de video"
                        android:layout_below="@+id/caption"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="descripcion del video"
                        android:layout_below="@+id/cardtitle"
                        />

                    <Button
                        android:id="@+id/goVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ver video"
                        android:layout_below="@+id/description"

                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>